<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Google Inc. All Rights Reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Hiking Basics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hiking Basics</string>
    <string name="nav_header_subtitle">bstscmc@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>

    <string name="leader_board_title">Leaderboard</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_intro">Who was Steve?</string>
    <string name="menu_avalanche">Avalanche</string>
    <string name="menu_10Essentials">10 Essentials</string>
    <string name="menu_Navigation">Navigation</string>
    <string name="menu_LNT">Leave No Trace</string>
    <string name="menu_YouTube">Steve Gladbach Videos</string>
    <string name="menu_YouTubeBestPlaces">YouTube - Best Places</string>

    <string name="videowall_demo_name">Video Wall</string>
    <string name="fragment_demo_name">Hiking Video</string>

    <string name="playerfragment_text">This is a YouTubePlayerFragment!</string>

    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!-- Quiz Titles -->
    <string name="titleQuiz">Quiz</string>
    <string name="titleAvalanche">Avalanche</string>
    <string name="titleTenEssentials">The 10 Essentials</string>
    <string name="titleNavigation">Navigation</string>
    <string name="titleLNT">Leave No Trace</string>

    <!-- Dummy Quiz Questions and Answers -->
    <string name="avalancheQ1">avalancheQ1</string>
    <string name="avalancheQ2">avalancheQ2</string>
    <string name="avalancheQ3">avalancheQ3</string>
    <string name="avalancheQ4">avalancheQ4</string>
    <string name="avalancheQ5">avalancheQ5</string>

    <string name="tenEssentialsQ1">Placeholder</string>
    <string name="tenEssentialsQ2">Placeholder</string>
    <string name="tenEssentialsQ3">Placeholder</string>
    <string name="tenEssentialsQ4">Placeholder</string>
    <string name="tenEssentialsQ5">Placeholder</string>

    <string name="navigationQ1">Placeholder</string>
    <string name="navigationQ2">Placeholder</string>
    <string name="navigationQ3">Placeholder</string>
    <string name="navigationQ4">Placeholder</string>
    <string name="navigationQ5">Placeholder</string>

    <string name="leaveNoTraceQ1">Placeholder</string>
    <string name="leaveNoTraceQ2">Placeholder</string>
    <string name="leaveNoTraceQ3">Placeholder</string>
    <string name="leaveNoTraceQ4">Placeholder</string>
    <string name="leaveNoTraceQ5">Placeholder</string>

    <string name="hint">Type your answer here</string>

    <string name="button_score_quiz">Score Quiz</string>
    <string name="button_start_quiz">Start Quiz</string>
    <string name="button_end_quiz">End Quiz</string>
    <string name="button_close">Close</string>

    <string name="user_score_title">Current Score:</string>

    <!-- Firebase Authentication Layout -->

    <string name="name_authenticateuser">Sign-in</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="status_sign_in_failed">Sign-in failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="greet_user_message">Hello! Watch the video and the answer the questions. </string>

</resources>
