<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_intro"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/menu_intro" />
        <item
            android:id="@+id/nav_avalanche"
            android:icon="@drawable/ic_ac_unit_black_24dp"
            android:title="@string/menu_avalanche" />
        <item
            android:id="@+id/nav_10Essentials"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/menu_10Essentials" />
        <item
            android:id="@+id/nav_Navigation"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/menu_Navigation" />
        <item
            android:id="@+id/nav_LNT"
            android:icon="@drawable/ic_pets_black_24dp"
            android:title="@string/menu_LNT" />
        <item
            android:id="@+id/nav_YouTubeWall"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_YouTube" />
        <item
            android:id="@+id/nav_YouTubeBestPlaces"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_YouTubeBestPlaces" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
