<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/app_name" />


        <TextView
            android:id="@+id/fragmentQ1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/avalancheQ1"
            android:visibility="gone" />

        <EditText
            android:id="@+id/fragmentA1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text"
            android:paddingTop="@dimen/paddingTop"
            android:visibility="gone"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/fragmentQ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:text="@string/avalancheQ2"
            android:visibility="gone" />

        <EditText
            android:id="@+id/fragmentA2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text"
            android:paddingTop="@dimen/paddingTop"
            android:visibility="gone"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/fragmentQ3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:text="@string/avalancheQ3"
            android:visibility="gone" />

        <EditText
            android:id="@+id/fragmentA3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text"
            android:paddingTop="@dimen/paddingTop"
            android:visibility="gone"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/fragmentQ4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:text="@string/avalancheQ4"
            android:visibility="gone" />

        <EditText
            android:id="@+id/fragmentA4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text"
            android:paddingTop="@dimen/paddingTop"
            android:visibility="gone"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/fragmentQ5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:text="@string/avalancheQ5"
            android:visibility="gone" />

        <EditText
            android:id="@+id/fragmentA5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text"
            android:paddingTop="@dimen/paddingTop"
            android:visibility="gone"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tvUserScoreTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:text="@string/user_score_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvUserScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingTop"
            android:text="0"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonScoreQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="@dimen/paddingTop"
            android:text="@string/button_score_quiz" />

    </LinearLayout>
</ScrollView>